<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/logoRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo_m"/>


    <EditText
        android:id="@+id/nombreCompleto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:hint="@string/nombre"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nombreUsuario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:hint="@string/nombre_usuario"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:hint="@string/correo"
        android:textColorHint="@color/white"
        android:inputType="textWebEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:hint="@string/contraseña"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtRepite"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:hint="@string/RepetirContraseña"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnconfirmaregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/btnRegistrar"
        android:backgroundTint="@color/botones"
        android:textSize="16sp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>