<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/logo_m" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/txtUsuario"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtClave"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:hint="@string/txtClave"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSesion"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/botones"
        android:padding="10dp"
        android:text="@string/btnInicio"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnInicioRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/botones"
        android:padding="10dp"
        android:text="@string/btnRegistrar"
        android:textSize="14sp"
        />
</LinearLayout>